@@ -1,5 +1,5 @@
 First-Run-Guide for Version 0.6.16
-
+----------------------------------
 
 NOTE!
 
@@ -10,7 +10,7 @@ Note! This software is in beta mode there are known and unknown bugs.
 
 Step 1.
 Download the add-on script here.
-http://code.google.com/p/luxeria-rep...a.zip&can=2&q=
+http://luxeria-repository.googlecode.com/files/repository.luxeria.zip
 
 Step 2.
 Put the file onto a USB Drive.
